# akai-android-agent

./: .gitignore  README.md  gradlew  settings.gradle.kts
.github/workflows/: agent.yml  build.yml  webhook.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: start_petals.sh
app/src/main/java/com/akinus21/akaiagent/: AkaiAgentApp.kt  MainActivity.kt  MainScreen.kt  MainViewModel.kt  PetalsServerManager.kt  RpcServerManager.kt  TunnelNative.kt  WorkerService.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: auth.rs  lib.rs  queue_client.rs  tunnel.rs  worker.rs
