[package]
name = "akai-tunnel-android"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["aws_lc_rs"] }
rustls-pemfile = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
ed25519-dalek = { version = "2", features = ["pkcs8"] }
rand = "0.8"
jni = "0.21"

[profile.release]
opt-level = "s"
lto = true
strip = true